# chb

./: .gitignore  README.md  mypy.ini  requirements.txt  setup.cfg  setup.py
.github/workflows/: ci.yml
biot/: biot_test.py  compute_rhs.py  rhs_biot_manufactured.py
cahn_hilliard/: ch.py  ch_convex_concave.py  ch_test.py
cahn_larche/: cl_test.py
computations/biot/: biot_optimization_paper.py
computations/cahn_hilliard/: ch.py  ch_convex_concave.py  (+6 more)
jitfailure-dolfin_expression_0c4bd17bb22020e2a2439b64edc5d8dd/: dolfin_expression_0c4bd17bb22020e2a2439b64edc5d8dd.cpp  recompile.sh
jitfailure-dolfin_expression_19d4f72bbb6f8de1c093e84b37795bdd/: dolfin_expression_19d4f72bbb6f8de1c093e84b37795bdd.cpp  recompile.sh
jitfailure-dolfin_expression_5dc4bc66c5fe2143791c3972fa6ce89a/: dolfin_expression_5dc4bc66c5fe2143791c3972fa6ce89a.cpp  error.log.old  recompile.sh
jitfailure-dolfin_expression_6263dffba47fe688ac188a923986624b/: dolfin_expression_6263dffba47fe688ac188a923986624b.cpp  recompile.sh
jitfailure-dolfin_expression_6de2c31083e8dbdaad52eaa3bd376214/: dolfin_expression_6de2c31083e8dbdaad52eaa3bd376214.cpp  recompile.sh
jitfailure-dolfin_expression_9576372562baec4441f35823e716b69e/: dolfin_expression_9576372562baec4441f35823e716b69e.cpp  error.log.old  recompile.sh
jitfailure-dolfin_expression_d01b0bae530a1029a28a7e96efa5e392/: dolfin_expression_d01b0bae530a1029a28a7e96efa5e392.cpp  recompile.sh
jitfailure-dolfin_expression_df5b5e2449c617c8eface246c8b5320b/: dolfin_expression_df5b5e2449c617c8eface246c8b5320b.cpp  recompile.sh
out_poisson/: poisson.h5
(+94 files in other folders)
