[metadata]
license-files = LICENSE.txt



[tool:pytest]
python_files = tests/*.py

[tool:isort]
skip = src/ch/__init__.py

[flake8]
max-line-length = 95
ignore =
  # F541: f-string is missing placeholders
  F541,
  # W503: line break before binary operator
  W503,
  # E731 do not assign a lambda expression, use a def
  E731,
  # E203 whitespace before ':'
  E203,
  # E266 too many leading '#' for block comment
  E266,
  # allow to use \dot
  W605
exclude =
  src/chb/__init__.py,
  src/chb/initialconditions/__init__.py,
  src/chb/parameters/biot/__init__.py,
  src/chb/parameters/elasticity/__init__.py,
  src/chb/parameters/energies/__init__.py,
  src/chb/parameters/flow/__init__.py,
  src/chb/parameters/interpolate/__init__.py,
  src/chb/util/__init__.py,
  src/chb/visualization/__init__.py,
